--- a/formulafinder/formulafinder.html
+++ b/formulafinder/formulafinder.html
@@ -64,7 +64,7 @@
         
 		<footer class="footer">
 			<div class="container">
-				<p class="text-muted">Copyright &copy; {{copyrightYear}} Junho. <span  class="text-center">Contact or Report issue : <a href='https://github.com/pinedance/pinedance.github.io/issues' target='_blank'><kbd>Here</kbd></a></span></p>
+				<p class="text-muted">Copyright &copy; {{copyrightYear}} Junho. <span  class="text-center">Contact or Report issue : <a href='https://github.com/pinedance/spa/issues' target='_blank'><kbd>Here</kbd></a></span></p>
 				<small class="text-muted">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</small>
 			</div>
 		</footer>
