--- a/ahp/parts/header.html
+++ b/ahp/parts/header.html
@@ -3,8 +3,8 @@
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
-        <h1>Analytic Hierarchy Process (AHP)&nbsp;
-          <small>Subtext</small>
+        <h1>결정장애 극복하기!
+          <small>Analytic Hierarchy Process (AHP)</small>
         </h1>
       </div>
     </div>
