--- a/ahp/ahp.html
+++ b/ahp/ahp.html
@@ -9,7 +9,9 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular.min.js"></script>
+    <script src="https://bouil.github.io/angular-google-chart/ng-google-chart.js"></script>
     <script type="text/javascript" src="ahp.js"></script>
 
 </head>
@@ -77,6 +79,21 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h2>기준에 대한 결과를 확인해 보세요</h2>
+      </div>
+      <div class="col-md-6">
+        <button class="btn btn-default" ng-click="reportCris()">Report</button>
+      </div>
+      <div class="col-md-12">
+        <p ng-bind="crisMsg"></p>
+        <div google-chart chart="crisPieChart" style="border:1px inset black;padding:0;width:400px"></div>
+        <!-- <div google-chart chart="crisPieChart"></div> -->
+      </div>
+    </div>
+
   </div>
 </div>
 
@@ -94,8 +111,8 @@
 
 <!-- start judgement alternatives -->
 <!-- <div class="section" ng-repeat="jgmAlt in jgmAlts" ng-if="showAltWorkSheet" ng-show="($index+1)===currentPage"> -->
-<div class="section" ng-repeat="jgmAlt in jgmAlts" ng-show="showAltWorkSheet">
-  <div class="container">
+<div class="section" ng-repeat="jgmAlt in jgmAlts" ng-if="showAltWorkSheet" ng-show="($index+1)===currentPage">
+  <div class="container" >
 
     <div class="row" >
       <div class="col-md-12 text-center ">
@@ -104,40 +121,23 @@
         </h2>
       </div>
     </div>
+
     <div class="row" ng-repeat="alt in jgmAlt.alts">
-      <div class="col-md-12">
-            <div class="btn-group col-md-6">
+      <div class="col-sm-6">
+            <div class="btn-group">
               <button class="btn btn-default"  ng-bind="$index + 1"></button>
               <button class="btn" ng-class="{'btn-default': alt.pair[0]!==alt.moreImpFact, 'btn-primary': alt.pair[0]===alt.moreImpFact }"
                   ng-bind="alt.pair[0]" ng-click="judgeFactor( alt, alt.pair[0], alt.pair[1] )"></button>
               <button class="btn" ng-class="{'btn-default': alt.pair[1]!==alt.moreImpFact, 'btn-primary': alt.pair[1]===alt.moreImpFact }"
                   ng-bind="alt.pair[1]" ng-click="judgeFactor( alt, alt.pair[1], alt.pair[0] )"></button>
             </div>
-            <div class="btn-group col-md-6">
+      </div>
+      <div class="col-sm-6"
+            <div class="btn-group">
               <button type="button" ng-repeat="int in intensitys"
                   class="btn" ng-class="{'btn-default': int!==alt.intensity, 'btn-primary': int===alt.intensity }"
                   ng-click="judgeIntens( alt, int )" ng-bind="int"></button>
             </div>
-            <!-- <div class="btn-group col-md-6">
-              <button class="btn btn-default"  ng-bind="$index + 1"></button>
-              <button class="btn" ng-class="{'btn-default': alt.pair[0]!==alt.moreImpFact, 'btn-primary': alt.pair[0]===alt.moreImpFact }"
-                  ng-bind="alt.pair[0]" ng-click="judgeAlts( $parent.$index, $index, alt.pair[0], alt.pair[1] )"></button>
-              <button class="btn" ng-class="{'btn-default': alt.pair[1]!==alt.moreImpFact, 'btn-primary': alt.pair[1]===alt.moreImpFact }"
-                  ng-bind="alt.pair[1]" ng-click="judgeAlts( $parent.$index, $index, alt.pair[1], alt.pair[0] )"></button>
-            </div>
-            <div class="btn-group col-md-6">
-              <button type="button" ng-repeat="int in intensitys"
-                  class="btn" ng-class="{'btn-default': int!==alt.intensity, 'btn-primary': int===alt.intensity }"
-                  ng-click="judgeAltsIntens( $parent.$index, $index, int )" ng-bind="int"></button>
-            </div> -->
-      </div>
-      <div class="col-md-12">
-        <div class="wall col-md-6">
-            <pre ng-bind="alt.judgementMessage"></pre>
-        </div>
-        <div class="form-group col-md-6">
-            <input class="form-control " placeholder="memo " type="text" ng-model="alt.rationale">
-        </div>
       </div>
     </div>
 
@@ -161,9 +161,27 @@
             <a href="" ng-click="setCurrentPage('next')">Next</a>
           </li>
         </ul>
-        <button type="button" ng-click="report()">Report</button>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h2>최종 결과를 확인해 보세요</h2>
+      </div>
+      <div class="col-md-6">
+        <button class="btn btn-default" ng-click="reportAlts()">Report</button>
+      </div>
+      <div class="col-md-3" ng-repeat="localAlt in localAlts">
+        <p ng-bind="localAlt.msg"></p>
+        <div google-chart chart="localAlt.pieChart" style="border:1px inset black;padding:0;width:400px"></div>
+        <!-- <div google-chart chart="crisPieChart"></div> -->
+      </div>
+    </div>
+
+    <div class="row">
+        <div google-chart chart="globalAltsPieChart" style="border:1px inset black;padding:0;width:400px"></div>
+    </div>
+
   </div>
 </div>
 
