--- a/ahp/parts/header.html
+++ b/ahp/parts/header.html
@@ -4,7 +4,11 @@
     <div class="col-md-12">
       <div class="page-header">
         <h1>결정장애 극복하기!
-          <small>Analytic Hierarchy Process (AHP)</small>
+          <small>
+            <a href="https://en.wikipedia.org/wiki/Analytic_hierarchy_process" target="_blank">
+              <br>Analytic Hierarchy Process (AHP)
+              </a>
+            </small>
         </h1>
       </div>
     </div>
