--- a/ahp/parts/header.html
+++ b/ahp/parts/header.html
@@ -2,13 +2,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="page-header">
-        <h1>결정장애 극복하기!
-          <small>
-            <a href="https://en.wikipedia.org/wiki/Analytic_hierarchy_process" target="_blank">
-              <br>Analytic Hierarchy Process (AHP)
-              </a>
-            </small>
+      <div class="page-header text-center">
+        <p>
+          AHP <small>(Analytic Hierarchy Process)</small>
+        </p>
+        <h1>
+          결정장애 극복하기!
         </h1>
       </div>
     </div>
