--- a/ahp/parts/navibar.html
+++ b/ahp/parts/navibar.html
@@ -7,15 +7,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a class="navbar-brand" href="#"><span>Brand</span></a>
+        <a class="navbar-brand" href="#"><span>YAHO's AHP app</span></a>
     </div>
     <div class="collapse navbar-collapse" id="navbar-ex-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active">
-          <a href="#">Home</a>
+        <li>
+          <a ng-click="modalExplainIntensity()">사용방법</a>
         </li>
         <li>
-          <a href="#">Contacts</a>
+          <a href="https://en.wikipedia.org/wiki/Analytic_hierarchy_process" target="_blank">AHP란?</a>
         </li>
       </ul>
     </div>
