--- a/ahp/ahp.html
+++ b/ahp/ahp.html
@@ -3,21 +3,22 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <style>
       /* when showing the picture */
       .ng-hide-remove      { animation:0.5s flipInX ease; }
       .section { padding: 0px; }
     </style>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script type="text/javascript" src="undermatrix.js"></script>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular.min.js"></script>
-    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-animate.min.js"></script> -->
-    <script type="text/javascript" src="https://bouil.github.io/angular-google-chart/ng-google-chart.js"></script>
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script> -->
+    <script type="text/javascript" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script>
+    <script type="text/javascript" src="//bouil.github.io/angular-google-chart/ng-google-chart.js"></script>
     <script type="text/javascript" src="ahp.js"></script>
 
 </head>
@@ -42,15 +43,15 @@
           </div>
           <div class="form-group">
             <!--Criterias(seperator: ",")-->
-            <label class="control-label" for="criterias">선택에서 무엇이 중요한가요?(콤마로 구분)</label>
+            <label class="control-label" for="criterias">선택에서 무엇이 중요한가요? <small>(콤마로 구분)</small></label>
             <input class="form-control" id="criterias" placeholder="Enter Your Criterias" type="text" ng-model="myCris">
           </div>
           <div class="form-group">
             <!--Alternatives(seperator: ",")-->
-            <label class="control-label" for="alternatives">가능한 선택지는 무엇인가요?(콤마로 구분) </label>
+            <label class="control-label" for="alternatives">가능한 선택지는 무엇인가요? <small>(콤마로 구분)</small></label>
             <input class="form-control" id="alternatives" placeholder="Enter Your Alternatives" type="text" ng-model="myAlts">
           </div>
-          <button type="submit" class="btn btn-default" ng-click="creatWorkSheet()">Submit</button>
+          <button class="btn btn-info" ng-click="creatWorkSheet()">시작!</button>
         </form>
       </div>
     </div>
@@ -65,94 +66,123 @@
     <div class="row">
       <div class="col-xs-12">
         <!--Jedge more important criterias-->
-        <h2 class="text-center">〔기준〕</h2>
-        <h3>어떤 기준이 얼만큼 더 중요한가요?</h3>
+        <!-- <h2>〔기준〕</h2> -->
+        <h4><kbd>기준</kbd> 어떤 기준이 얼만큼 더 중요한가요?</h4>
       </div>
     </div>
   </div>
 
   <div class="container">
     <div class="row" ng-repeat="cri in jgmCris">
-      <div class="col-xs-6">
-        <div class="btn-group">
-          <button class="btn" ng-class="{'btn-warning': !(cri.moreImpFact && cri.intensity), 'btn-success': (cri.moreImpFact && cri.intensity) }"
-              ng-bind="$index + 1"></button>
-          <button class="btn" ng-class="{'btn-default': cri.pair[0]!==cri.moreImpFact, 'btn-primary': cri.pair[0]===cri.moreImpFact }"
-              ng-bind="cri.pair[0]" ng-click="judgeFactor( cri, cri.pair[0], cri.pair[1] )"></button>
-          <button class="btn" ng-class="{'btn-default': cri.pair[1]!==cri.moreImpFact, 'btn-primary': cri.pair[1]===cri.moreImpFact }"
-              ng-bind="cri.pair[1]" ng-click="judgeFactor( cri, cri.pair[1], cri.pair[0] )"></button>
-        </div>
-      </div>
-      <div class="col-xs-6">
-        <div class="btn-group">
-          <button type="button"  ng-repeat="int in intensitys"
-              class="btn" ng-class="{'btn-default': int!==cri.intensity, 'btn-primary': int===cri.intensity }"
-              ng-click="judgeIntens( cri, int )" ng-bind="int"></button>
-        </div>
-      </div>
-      <!-- <div class="col-xs-12">
+      <p>
         <div class="col-xs-6">
-          <pre ng-bind="cri.judgementMessage"></pre>
+          <div class="btn-group">
+            <button class="btn btn-sm" ng-class="{'btn-warning': !(cri.moreImpFact && cri.intensity), 'btn-success': (cri.moreImpFact && cri.intensity) }"
+                ng-bind="$index + 1"></button>
+            <button class="btn btn-sm" ng-class="{'btn-default': cri.pair[0]!==cri.moreImpFact, 'btn-primary': cri.pair[0]===cri.moreImpFact }"
+                ng-bind="cri.pair[0]" ng-click="judgeFactor( cri, cri.pair[0], cri.pair[1] )"></button>
+            <button class="btn btn-sm" ng-class="{'btn-default': cri.pair[1]!==cri.moreImpFact, 'btn-primary': cri.pair[1]===cri.moreImpFact }"
+                ng-bind="cri.pair[1]" ng-click="judgeFactor( cri, cri.pair[1], cri.pair[0] )"></button>
+          </div>
         </div>
-        <div class="form-group col-xs-6">
-            <input class="form-control" placeholder="memo " type="text" ng-model="cri.rationale">
+        <div class="col-xs-6">
+          <div class="btn-group">
+            <button type="button"  ng-repeat="int in intensitys"
+                class="btn btn-sm" ng-class="{'btn-default': int!==cri.intensity, 'btn-primary': int===cri.intensity }"
+                ng-click="judgeIntens( cri, int )" ng-bind="int"></button>
+          </div>
         </div>
-      </div> -->
+      </p>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h3>기준에 대한 결과 
-          <span><button class="btn btn-default" ng-click="reportCris()">확인!</button></span>
-        </h3>
-        <p ng-bind="crisMsg"></p>
+        <br>
+        <h4>기준에 대한 결과
+          <span><button class="btn btn-success btn-xs" ng-click="reportCris()">확인!</button></span>
+        </h4>
+        <p ng-class="{'text-primary': globalCrisIdx.cr <= 10, 'text-danger': globalCrisIdx.cr > 10}" ng-bind="crisMsg"></p>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" ng-show="showAlts" id="crisPieChart">
       <div class="col-xs-12 text-center">
-        <!-- <div google-chart chart="crisPieChart" style="border:1px inset black;padding:0;width:400px"></div> -->
-        <!-- <div google-chart chart="crisPieChart" style="height:600px; width:100%;"></div> -->
-        <div google-chart chart="crisPieChart" style=""></div>
+        <div google-chart chart="crisPieChart"></div>
       </div>
     </div>
   </div>
 
-</div>
+</div> <!-- section -->
 
 
 
 <hr ng-if="showAlts" >
 <!-- start judgement alternatives -->
 
-<div class="section" ng-repeat="jgmAlt in jgmAlts" ng-if="showAlts" ng-show="($index+1)===currentPage">
-  <div class="container" >
+<div class="section" ng-if="showAlts" >
+
+  <div class="container ">
+    <div class="row">
+      <div class="col-xs-10 ">
+        <ul class="nav nav-tabs">
+          <!-- <li>
+            <a ng-click="setCurrentPage('prev')" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+          </li> -->
+          <li ng-repeat="cri in cris" ng-class="{'active': currentPage==($index + 1)}" >
+            <a ng-bind="cri" ng-click="setCurrentPage($index+1)"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-xs-2 ">
+        <button class="btn btn-default btn-sm" ng-click="reportAlts()">선택!</button>
+      </div>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="container " ng-repeat="jgmAlt in jgmAlts" ng-show="($index+1)===currentPage">
 
     <div class="row" >
-      <div class="col-xs-12 text-center ">
-        <h3 ng-bind="'〔'+jgmAlt.cri+'〕에 대한 선택은?'"></h3>
+      <div class="col-xs-12">
+        <h4><kbd ng-bind="jgmAlt.cri"></kbd> 대한 선택은?</h4>
       </div>
     </div>
 
     <div class="row" ng-repeat="alt in jgmAlt.alts">
+      <p>
       <div class="col-xs-6">
             <div class="btn-group">
-              <button class="btn" ng-class="{'btn-warning': !(alt.moreImpFact && alt.intensity), 'btn-success': (alt.moreImpFact && alt.intensity) }"
+              <button class="btn btn-sm" ng-class="{'btn-warning': !(alt.moreImpFact && alt.intensity), 'btn-success': (alt.moreImpFact && alt.intensity) }"
                   ng-bind="$index + 1"></button>
-              <button class="btn" ng-class="{'btn-default': alt.pair[0]!==alt.moreImpFact, 'btn-primary': alt.pair[0]===alt.moreImpFact }"
+              <button class="btn btn-sm" ng-class="{'btn-default': alt.pair[0]!==alt.moreImpFact, 'btn-primary': alt.pair[0]===alt.moreImpFact }"
                   ng-bind="alt.pair[0]" ng-click="judgeFactor( alt, alt.pair[0], alt.pair[1] )"></button>
-              <button class="btn" ng-class="{'btn-default': alt.pair[1]!==alt.moreImpFact, 'btn-primary': alt.pair[1]===alt.moreImpFact }"
+              <button class="btn btn-sm" ng-class="{'btn-default': alt.pair[1]!==alt.moreImpFact, 'btn-primary': alt.pair[1]===alt.moreImpFact }"
                   ng-bind="alt.pair[1]" ng-click="judgeFactor( alt, alt.pair[1], alt.pair[0] )"></button>
             </div>
       </div>
       <div class="col-xs-6">
             <div class="btn-group">
               <button type="button" ng-repeat="int in intensitys"
-                  class="btn" ng-class="{'btn-default': int!==alt.intensity, 'btn-primary': int===alt.intensity }"
+                  class="btn btn-sm" ng-class="{'btn-default': int!==alt.intensity, 'btn-primary': int===alt.intensity }"
                   ng-click="judgeIntens( alt, int )" ng-bind="int"></button>
             </div>
+      </div>
+    </p>
+    </div>
+  </div>   <!--- container -->
+<br>
+  <div class="container " ng-show="showRst">
+
+    <div class="row" ng-repeat="localAlt in localAlts" ng-show="($index+1)===currentPage">
+      <div class="col-xs-12" >
+        <p ng-class="{'text-primary': localAlt.idx.cr <= 10, 'text-danger': localAlt.idx.cr > 10}" ng-bind="crisMsg">
+          <kbd ng-bind="localAlt.cri"></kbd>
+        </p>
+        <!-- <p ng-bind="localAlt.msg"><kbd ng-bind="localAlt.cri"></kbd></p> -->
+        <div google-chart chart="localAlt.pieChart"></div>
       </div>
     </div>
 
@@ -160,49 +190,15 @@
 </div>  <!-- section -->
 <!-- end judgement alternatives -->
 
-<div class="section " ng-if="showAlts">
+<div class="section " ng-show="showRst" id="finalRst">
+<hr>
   <div class="container ">
-    <div class="row text-center ">
-      <div class="col-xs-12 ">
-
-        <ul class="pagination ">
-          <li>
-            <a href="" ng-click="setCurrentPage('prev')">Prev</a>
-          </li>
-          <li ng-repeat="cri in cris">
-            <a href="" ng-bind="$index + 1" ng-click="setCurrentPage($index+1)"></a>
-          </li>
-          <li>
-            <a href="" ng-click="setCurrentPage('next')">Next</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12">
-        <h3>최종 결과
-           <span>
-             <button class="btn btn-default" ng-click="reportAlts()">확인!</button>
-           </span>
-         </h3>
-      </div>
-    </div>
-
-    <div class="row" ng-repeat="localAlt in localAlts">
-      <div class="col-xs-12" >
-        <p ng-bind="localAlt.msg"></p>
-        <div google-chart chart="localAlt.pieChart"></div>
-      </div>
-    </div>
-
     <div class="row">
       <div class="col-xs-12" >
         <h3>최후의 속마음은?</h3>
         <div google-chart chart="globalAltsPieChart"></div>
       </div>
     </div>
-
   </div>
 </div>
 
