--- a/formulafinder/formulafinder.html
+++ b/formulafinder/formulafinder.html
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-8">
                         <h1>goFang <button class="btn btn-primary btn-lg" ng-click="resetForms()">Reset</button></h1>
-                        <p>Find Your Own Formulas !!! </p>
+                        <p>고방<small>(상한,금궤)</small> 검색기</p>
                     </div>
                     <div class="col-sm-6 col-xs-4">
                         <img src="http://livedoor.blogimg.jp/bakusei/imgs/c/a/cacbdc7e.jpg" alt="" width="160px" class="pull-right img-responsive img-rounded">
@@ -34,8 +34,8 @@
 						<tags-input ng-model="inSymp" placeholder="찾는 증상" min-length=1 display-property="symptoms" on-tag-added="findHerbsymp()" on-tag-removed="findHerbsymp()">
 							<auto-complete source="loadItems($query, 'symptoms')" min-length=1 debounce-delay=50></auto-complete>
 						</tags-input>
-						<button class="btn btn-warning" ng-repeat="symp in symptoms">{{symp}}</button>
-						<button class="btn btn-success" ng-repeat="hbsy in herbssymptoms" ng-click="addHerb(hbsy)">{{hbsy}}</button>
+						<button class="btn btn-warning" ng-repeat="symp in symptoms" ng-bind="symp"></button>
+						<button class="btn btn-success" ng-repeat="hbsy in herbssymptoms" ng-click="addHerb(hbsy)" ng-bind="hbsy"></button>
 					</div>
 				</div>
             </div>
@@ -49,13 +49,13 @@
 					<p ng-bind="'처방명 : ' + detail.txName"></p>
 					<p ng-bind="'방극 : ' + detail.txFangi"><p>
 					<p ng-bind="'구성 : ' + detail.txGoo"><p>
-					<button type="button" class="btn btn-default" ng-repeat="h in herbdetails" ng-click="showHerbDetail(h)" >{{h}}</button>
-					<blockquote><p>{{yack}}</p></blockquote>
+					<button type="button" class="btn btn-default" ng-repeat="h in herbdetails" ng-class="{'btn-info': $index===yackIdx}" ng-click="showHerbDetail(h, $index)" ng-bind="h"></button>
+					<blockquote><p ng-bind="yack"></p></blockquote>
 				</div>
 			</div>
 			<div class="col-sm-6">
 				<div clsss="list-group">
-					<a href="#formulaDetail" class="list-group-item" ng-repeat="formula in results" ng-click="showDetail(formula)">{{formula}} </a>
+					<a href="#formulaDetail" class="list-group-item" ng-class="{'active': $index===fmlIdx}" ng-repeat="formula in results" ng-click="showDetail(formula, $index)" ng-bind="formula"></a>
 				</div>
 	  		</div>
 		</div>
@@ -64,8 +64,11 @@
         
 		<footer class="footer">
 			<div class="container">
-				<p class="text-muted">Copyright &copy; {{copyrightYear}} Junho. <span  class="text-center">Contact or Report issue : <a href='https://github.com/pinedance/spa/issues' target='_blank'><kbd>Here</kbd></a></span></p>
-				<small class="text-muted">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</small>
+				<p class="text-muted">
+					&copy; {{copyrightYear}} Junho <a href='https://pinedance.github.io/blog/' target='_blank'><kbd>Blog</kbd></a><span  class="text-center"> 
+					/ Contact or Report issue : <a href='https://github.com/pinedance/spa/issues' target='_blank'><kbd>Github</kbd></a></span>
+				</p>
+				<!--<small class="text-muted">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</small>-->
 			</div>
 		</footer>
 		
