--- a/ahp/ahp.html
+++ b/ahp/ahp.html
@@ -8,7 +8,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <style>
       /* when showing the picture */
-      .ng-hide-remove      { animation:0.5s flipInX ease; }
+      /*.ng-hide-remove      { animation:0.5s flipInX ease; }*/
       .section { padding: 0px; }
     </style>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -30,9 +30,15 @@
 <!-- header -->
 <div class="section" ng-include="'parts/header.html'"></div>
 
+
+
+
 <!-- Set Goal, Criterias, and alternatives -->
 <div class="section">
+
+
   <div class="container">
+
     <div class="row">
       <div class="col-xs-12">
         <form role="form">
@@ -54,15 +60,28 @@
           <button class="btn btn-info" ng-click="creatWorkSheet()">시작!</button>
         </form>
       </div>
+
     </div>
+
   </div>
+
+
 </div>
+
+
+
 
 <hr ng-if="showCriWorkSheet" >
 
+
+
+
 <!-- get criterias intensitys and show result -->
 <div class="section" ng-if="showCriWorkSheet">
+
+
   <div class="container">
+
     <div class="row">
       <div class="col-xs-12">
         <!--Jedge more important criterias-->
@@ -70,14 +89,19 @@
         <h4><kbd>기준</kbd> 어떤 기준이 얼만큼 더 중요한가요?</h4>
       </div>
     </div>
+
   </div>
 
+
   <div class="container">
+
     <div class="row" ng-repeat="cri in jgmCris">
       <p>
         <div class="col-xs-6">
           <div class="btn-group">
-            <button class="btn btn-sm" ng-class="{'btn-warning': !(cri.moreImpFact && cri.intensity), 'btn-success': (cri.moreImpFact && cri.intensity) }"
+            <!-- <button class="btn btn-sm" ng-class="{'btn-warning': !(cri.moreImpFact && cri.intensity), 'btn-success': (cri.moreImpFact && cri.intensity) }"
+                ng-bind="$index + 1"></button> -->
+            <button class="btn btn-sm" ng-class="{'btn-warning': !cri.decided, 'btn-success': cri.decided }"
                 ng-bind="$index + 1"></button>
             <button class="btn btn-sm" ng-class="{'btn-default': cri.pair[0]!==cri.moreImpFact, 'btn-primary': cri.pair[0]===cri.moreImpFact }"
                 ng-bind="cri.pair[0]" ng-click="judgeFactor( cri, cri.pair[0], cri.pair[1] )"></button>
@@ -94,25 +118,42 @@
         </div>
       </p>
     </div>
+
   </div>
 
+
+
+
   <div class="container">
+
     <div class="row">
       <div class="col-xs-12">
         <br>
         <h4>기준에 대한 결과
           <span><button class="btn btn-success btn-xs" ng-click="reportCris()">확인!</button></span>
         </h4>
-        <p ng-class="{'text-primary': globalCrisIdx.cr <= 10, 'text-danger': globalCrisIdx.cr > 10}" ng-bind="crisMsg"></p>
+
+        <div class="row" ng-show="showAlts" id="crisPieChart">
+          <div class="col-xs-12 text-center">
+            <div class="panel" ng-class="{'panel-info': globalCrisIdx.cr <= 10, 'panel-danger': globalCrisIdx.cr > 10}" >
+              <div class="panel-heading">
+                <!-- <h3 class="panel-title">Panel title</h3> -->
+                <h3 class="panel-title" ng-bind="crisMsg"></h3>
+              </div>
+              <div class="panel-body">
+                  <div google-chart chart="crisPieChart"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
       </div>
     </div>
 
-    <div class="row" ng-show="showAlts" id="crisPieChart">
-      <div class="col-xs-12 text-center">
-        <div google-chart chart="crisPieChart"></div>
-      </div>
-    </div>
   </div>
+
 
 </div> <!-- section -->
 
@@ -123,9 +164,11 @@
 
 <div class="section" ng-if="showAlts" >
 
+
   <div class="container ">
+
     <div class="row">
-      <div class="col-xs-10 ">
+      <div class="col-xs-12 ">
         <ul class="nav nav-tabs">
           <!-- <li>
             <a ng-click="setCurrentPage('prev')" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
@@ -133,18 +176,20 @@
           <li ng-repeat="cri in cris" ng-class="{'active': currentPage==($index + 1)}" >
             <a ng-bind="cri" ng-click="setCurrentPage($index+1)"></a>
           </li>
+          <li>
+            <a ng-click="reportAlts()">결과확인</a>
+          </li>
         </ul>
       </div>
-      <div class="col-xs-2 ">
-        <button class="btn btn-default btn-sm" ng-click="reportAlts()">선택!</button>
-      </div>
     </div>
+
   </div>
 
   <br>
 
-  <div class="container " ng-repeat="jgmAlt in jgmAlts" ng-show="($index+1)===currentPage">
 
+  <div class="container " ng-repeat="jgmAlt in jgmAlts" ng-show="($index+1)===currentPage">
+  <!-- <div class="container " ng-repeat="jgmAlt in jgmAlts"> -->
     <div class="row" >
       <div class="col-xs-12">
         <h4><kbd ng-bind="jgmAlt.cri"></kbd> 대한 선택은?</h4>
@@ -155,7 +200,7 @@
       <p>
       <div class="col-xs-6">
             <div class="btn-group">
-              <button class="btn btn-sm" ng-class="{'btn-warning': !(alt.moreImpFact && alt.intensity), 'btn-success': (alt.moreImpFact && alt.intensity) }"
+              <button class="btn btn-sm" ng-class="{'btn-warning': !alt.decided, 'btn-success': alt.decided }"
                   ng-bind="$index + 1"></button>
               <button class="btn btn-sm" ng-class="{'btn-default': alt.pair[0]!==alt.moreImpFact, 'btn-primary': alt.pair[0]===alt.moreImpFact }"
                   ng-bind="alt.pair[0]" ng-click="judgeFactor( alt, alt.pair[0], alt.pair[1] )"></button>
@@ -172,37 +217,63 @@
       </div>
     </p>
     </div>
-  </div>   <!--- container -->
-<br>
-  <div class="container " ng-show="showRst">
 
-    <div class="row" ng-repeat="localAlt in localAlts" ng-show="($index+1)===currentPage">
+  </div>   <!--- container -->
+
+
+<br>
+
+
+
+
+  <div class="container " ng-repeat="localAlt in localAlts" ng-show="($index+1) === currentPage">
+  <!-- <div class="container " ng-show="showRst" ng-repeat="localAlt in localAlts"> -->
+
+    <div class="row" >
       <div class="col-xs-12" >
-        <p ng-class="{'text-primary': localAlt.idx.cr <= 10, 'text-danger': localAlt.idx.cr > 10}" ng-bind="localAlt.msg">
-          <!--<kbd ng-bind="localAlt.cri"></kbd>-->
-        </p>
-        <!-- <p ng-bind="localAlt.msg"><kbd ng-bind="localAlt.cri"></kbd></p> -->
-        <div google-chart chart="localAlt.pieChart"></div>
+        <div class="panel panel-info" ng-class="{'panel-info': localAlt.idx.cr <= 10, 'panel-danger': localAlt.idx.cr > 10}">
+          <div class="panel-heading">
+            <h3 class="panel-title" ng-bind="localAlt.msg"></h3>
+          </div>
+          <div class="panel-body">
+              <div google-chart chart="localAlt.pieChart"></div>
+          </div>
+        </div>
+
       </div>
     </div>
 
   </div>   <!--- container -->
+
+
 </div>  <!-- section -->
 <!-- end judgement alternatives -->
+
+
+
 
 <div class="section " ng-show="showRst" id="finalRst">
 <hr>
   <div class="container ">
     <div class="row">
       <div class="col-xs-12" >
-        <h3>최후의 속마음은?</h3>
-        <div google-chart chart="globalAltsPieChart"></div>
+        <div class="panel panel-info">
+          <div class="panel-heading">
+                <h3 class="panel-title" >최후의 속마음은?</h3>
+          </div>
+          <div class="panel-body">
+              <div google-chart chart="globalAltsPieChart"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<!--<div ng-include="'parts/footer.html'"></div>-->
+
+
+
+<!-- <div ng-include="'parts/footer.html'"></div> -->
 <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
