--- a/formulafinder/formulafinder.html
+++ b/formulafinder/formulafinder.html
@@ -5,8 +5,8 @@
         <title>goFang</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../publicAsset/ng-modules/ng-tags-input/ng-tags-input.min.css">
-		<link rel="stylesheet" href="../publicAsset/css/sticky-footer.css">	
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
+		<link rel="stylesheet" href="../publicAsset/css/sticky-footer.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body ng-controller="FormulaCtrl">
 		<header>
@@ -31,7 +31,7 @@
 						</tags-input>
 					</div>
 					<div class="col-sm-6">
-						<tags-input ng-model="formulaName" placeholder="찾는 처방이름" min-length=2 display-property="formulas" on-tag-added="findFormula()" on-tag-removed="findFormula()">
+						<tags-input ng-model="formulaName" placeholder="찾는 처방이름" min-length=2 display-property="formulas" on-tag-added="find()" on-tag-removed="find()">
 							<auto-complete source="loadItems($query, 'formulas')" min-length=1 debounce-delay=50></auto-complete>
 						</tags-input>
 						<tags-input ng-model="inSymp" placeholder="찾는 증상" min-length=1 display-property="symptoms" on-tag-added="findHerbsymp()" on-tag-removed="findHerbsymp()">
@@ -44,7 +44,7 @@
             </div>
 		</div>
 		</header>
-		
+
 		<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-6">
@@ -65,31 +65,31 @@
 		</div>
 
 		</div><!--container-fluid-->
-        
+
 		<footer class="footer">
 			<div class="container">
 				<p class="text-muted">
-					&copy; {{copyrightYear}} Junho <a href='https://pinedance.github.io/blog/' target='_blank'><kbd>Blog</kbd></a><span  class="text-center"> 
+					&copy; {{copyrightYear}} Junho <a href='https://pinedance.github.io/blog/' target='_blank'><kbd>Blog</kbd></a><span  class="text-center">
 					/ Contact or Report issue : <a href='https://github.com/pinedance/spa/issues' target='_blank'><kbd>Github</kbd></a></span>
 				</p>
 				<!--<small class="text-muted">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</small>-->
 			</div>
 		</footer>
-		
+
 <!--   script............................................................................................-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
-		
+
 		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 		<script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
 
 		<script src="../publicAsset/javascript/exArray.js"></script>
 		<script src="../publicAsset/ng-modules/ng-tags-input/ng-tags-input.min.js"></script>
 
-<!--   script............................................................................................-->		
-		
+<!--   script............................................................................................-->
+
 		<script src="formulafinder.js"></script>
 
 	</body>
